--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
     "bootstrap": "5",
     "bootstrap-icons": "^1.11.2",
     "core-js": "^3.8.3",
     "firebase": "^10.7.1",
+    "install": "^0.13.0",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.4.7"
+    "vuetify": "^3.4.7",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
